Reentreno con feedback del usuario

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ Datasets/integrated_news_dataset.csv
 Datasets/crawled_news.json
 Datasets/noticias_actualizadas.csv
 Datasets/user_feedback.csv
+Datasets/dataset_con_feedback.csv
